--- a/document/開発.md
+++ b/document/開発.md
@@ -1,3 +1,8 @@
 # プロジェクト進捗管理　ガントチャート
 
 https://docs.google.com/spreadsheets/d/1zcICsNI8FeobAz0OJA_6ljW3WibZfMKnr55VtePGg04/edit?usp=sharing
+
+# 作業記録
+## 9月6日　git flow 導入、レスポンシブデザイン着手
+## 9月7日　レスポンシブデザイン（login, signup）、create時のエラー対応
+## 
