1st. batch file : guest update

--- a/document/開発.md
+++ b/document/開発.md
@@ -8,3 +8,4 @@ https://docs.google.com/spreadsheets/d/1zcICsNI8FeobAz0OJA_6ljW3WibZfMKnr55VtePG
 ## 9月8日　レスポンシブデザイン（list,update,delete）
 ## 9月9日　レスポンシブデザイン（create,drill,review,home）
 ## 9月10日　レスポンシブデザイン（home）、
+## 9月11日　バッチ処理導入
