--- a/document/開発.md
+++ b/document/開発.md
@@ -9,3 +9,10 @@ https://docs.google.com/spreadsheets/d/1zcICsNI8FeobAz0OJA_6ljW3WibZfMKnr55VtePG
 ## 9月9日　レスポンシブデザイン（create,drill,review,home）
 ## 9月10日　レスポンシブデザイン（home）、
 ## 9月11日　バッチ処理導入
+１．guestアカウント用のデータ更新処理のバッチ
+２．バックアップデータのバッチ
+- dropboxへのbackupがAPI期間が短すぎる→
+- 無料版のせいかリフレッシュトークンの取得が不明、google driveなどでも同様→
+- ひとまず、サーバ上にバックアップファイルを残すのみとした。
+
+
