--- a/document/開発.md
+++ b/document/開発.md
@@ -12,7 +12,8 @@ https://docs.google.com/spreadsheets/d/1zcICsNI8FeobAz0OJA_6ljW3WibZfMKnr55VtePG
 １．guestアカウント用のデータ更新処理のバッチ
 ２．バックアップデータのバッチ
 - dropboxへのbackupがAPI期間が短すぎる→
-- 無料版のせいかリフレッシュトークンの取得が不明、google driveなどでも同様→
+- 無料版のためかリフレッシュトークンの取得が不明。他のストレージ（google driveなど）でも同様→
 - ひとまず、サーバ上にバックアップファイルを残すのみとした。
+
 
 
