--- a/document/開発.md
+++ b/document/開発.md
@@ -1,19 +1,12 @@
-# プロジェクト進捗管理　ガントチャート
+# 作業メモ
+## 12月8～13日 ＣＳＲＦ設定による不具合対応
+・Front:vercel + back:herokuの構成では、特殊な設定のchromeブラウザのみで稼働。  
+⇒Frontのプロジェクトをビルドしてバックエンドと同一のheokuにデプロイする。  
+⇒デプロイ作業が煩雑になるので、reactでスクリプトファイル作成（build-deploy.sh）package.jsonに追加。  
 
-https://docs.google.com/spreadsheets/d/1zcICsNI8FeobAz0OJA_6ljW3WibZfMKnr55VtePGg04/edit?usp=sharing
-
-# 作業記録
-## 9月6日　git flow 導入、レスポンシブデザイン着手
-## 9月7日　レスポンシブデザイン（login, signup）、create時のエラー対応
-## 9月8日　レスポンシブデザイン（list,update,delete）
-## 9月9日　レスポンシブデザイン（create,drill,review,home）
-## 9月10日　レスポンシブデザイン（home）、
-## 9月11日　バッチ処理導入
-１．guestアカウント用のデータ更新処理のバッチ
-２．バックアップデータのバッチ
-- dropboxへのbackupがAPI期間が短すぎる→
-- 無料版のためかリフレッシュトークンの取得が不明。他のストレージ（google driveなど）でも同様→
-- ひとまず、サーバ上にバックアップファイルを残すのみとした。
-
+## 12月15日　ページング処理導入  
+  ‐ 携帯表示時に編集ページでフリーズ、モーダルの文字が白抜きになる問題を解決するためにページング処理を導入した。  
+## 1月23日  useContextのリファクタ  
+  ‐ ログイン画面表示に4秒以上かかる問題に対処するため、useEffectのコードを改善して、DataProviderをログイン画面表示後に適用した。  
 
 
