--- a/document/開発.md
+++ b/document/開発.md
@@ -9,4 +9,6 @@
 ## 1月23日  useContextのリファクタ  
   ‐ ログイン画面表示に4秒以上かかる問題に対処するため、useEffectのコードを改善して、DataProviderをログイン画面表示後に適用した。  
 
+## 3月10～15日  TOP画面の作り直し  
+  ‐ TOP画面の外見と使用感を改善した（front/src/pages,front/src/commonを新規作成）。
 
